infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jacob-chorus
  labels:
    jacob-app: chorus
spec:
# ipFamilyPolicy: PreferDualStack
# ipFamilies:
# - IPv4
# - IPv6
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9000 
  selector:
    jacob-app: chorus
