infra/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  generation: 1
  name: jacob-chorus
spec:
  gateways:
  - default/webapp-gateway
  hosts:
  - jacob-chorus.api.scaleai.dev
  http:
  - name: jacob-chorus
    route:
    - destination:
        host: jacob-chorus.default.svc.cluster.local
